--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+	Copyright 2021 Git Training- Done by Ameera
+-->
 <head>
 	<title>A sample html</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
