--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2021 Git Training- Done by Ameera
 -->
 <head>
-	<title>A sample html</title>
+	<title>A very respectful website!</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content- but random in order
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>Lets copycat it</p>
 	</footer>
 </body>
 </html>
