--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-adding a line
+something else im adding here
 	Copyright 2021 Git Training- Done by Ameera
 adding something else
 -->
@@ -19,9 +19,9 @@ adding something else
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-		changed it by some chars	Just some content
-again new ones		
-</p>
+			Just some content
+			here too :D 
+		</p>
 	</main>
 	<footer class="container">
 		<p>Copyright 2021 Git</p>
