--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,7 @@
 <!--
 adding a line
 	Copyright 2021 Git Training- Done by Ameera
+adding something else
 -->
 <head>
 	<title>A very respectful website!</title>
@@ -18,8 +19,9 @@ adding a line
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
-		</p>
+		changed it by some chars	Just some content
+again new ones		
+</p>
 	</main>
 	<footer class="container">
 		<p>Copyright 2021 Git</p>
