changed simple on bigt

--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!--
-something else im adding here
+something
 	Copyright 2021 Git Training- Done by Ameera
 adding something else
 -->
 <head>
-	<title>A very respectful website!</title>
+	<title>A very respectful & changed website!</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
