local:changing simple

--- a/simple.html
+++ b/simple.html
@@ -24,7 +24,7 @@ adding something else
 		</p>
 	</main>
 	<footer class="container">
-		<p>Copyright 2021 Git</p>
+		<p>Copyright 2021 Git- all rights reserved</p>
 	</footer>
 </body>
 </html>
