--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-something
+something new here for stashing
 	Copyright 2021 Git Training- Done by Ameera
 adding something else
 -->
