simple tag change - 1.1

--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,7 @@
 <!--
 hellonssomething new here for stashing
 	Copyright 2021 Git Training- Done by Ameera
+compare
 adding something else
 -->
 <head>
